Implementação da busca de plugins na pasta "optionaljars" através da classe LocalConfigurationImpl. Implementação da configuração de ResultSetViewers através de um arquivo de configuração pela classe XMLResultSetViewerConfiguration.java.